--- a/css/configs/_normalize.scss
+++ b/css/configs/_normalize.scss
@@ -1,22 +1,11 @@
-//重置类
+/* 重置类 */
 * {
     margin: 0;
     padding: 0;
 }
 
-ul,
-li {
-    list-style: none;
-}
 
-a {
-    color: #333;
-    text-decoration: none;
-}
-
-html,
-body {
-    overflow: hidden;
+html,body {
     width: 100%;
     height: 100%;
     font-family: 'Arial Normal', 'Arial';
@@ -26,9 +15,17 @@ body {
     color: #333333;
 }
 
+ul,li {
+    list-style: none;
+}
 
-i,
-em {
+a {
+    color: #333;
+    text-decoration: none;
+}
+
+
+i,em {
     font-style: normal;
 }
 
