--- a/css/configs/_normalize.scss
+++ b/css/configs/_normalize.scss
@@ -1,11 +1,40 @@
 /* 重置类 */
-* {
+
+body,
+blockquote,
+button,
+dd,
+dl,
+dt,
+fieldset,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+input,
+legend,
+li,
+ol,
+p,
+pre,
+td,
+textarea,
+th,
+ul {
     margin: 0;
     padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    background: transparent
 }
 
-
-html,body {
+html,
+body {
     width: 100%;
     height: 100%;
     font-family: 'Arial Normal', 'Arial';
@@ -15,7 +44,8 @@ html,body {
     color: #333333;
 }
 
-ul,li {
+ul,
+li {
     list-style: none;
 }
 
@@ -24,8 +54,8 @@ a {
     text-decoration: none;
 }
 
-
-i,em {
+i,
+em {
     font-style: normal;
 }
 
@@ -43,4 +73,23 @@ input {
 input:focus {
     border-color: #e5e5e5;
     box-shadow: 0 0 5px 2px rgb(3, 120, 255);
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    empty-cells: show;
+}
+
+dt,
+dd {
+    line-height: 24px;
+}
+
+dt {
+    font-weight: 700;
+}
+
+dd {
+    padding-left: 14px;
 }
