--- a/css/pages/emaoad-management.scss
+++ b/css/pages/emaoad-management.scss
@@ -5,6 +5,7 @@
 @import '../components/_zone';
 @import '../components/_material';
 @import '../components/_warehouse';
+@import '../components/_pop';
 
 //布局类
 /* 页面容器 */
