--- a/partials/pop-manage.html
+++ b/partials/pop-manage.html
@@ -1,50 +1,74 @@
-<div class="pop effect8">
+<div class="pop">
 	<form>
 		<h3>
-			添加/修改廣告
+			添加/修改廣告<i>×</i>
 		</h3>
 		<div>
 			<div>
-				<span>目标广告位:一猫大首页右侧banner</span>
+				<i>目标广告位：</i>
+				<span>一猫大首页右侧banner</span>
 			</div>
 			<div>
-				<span>广告主名称：</span><input type="text">
+				<i>广告主名称：</i>
+				<span><input type="text"></span>
 			</div>
 			<div>
-				<span>广告物料名称：</span><input type="text">
+				<i>广告物料名称：</i>
+				<span><input type="text"></span>
 			</div>
 			<div>
-				<span>广告尺寸：990X100</span>
+				<i>广告尺寸：</i>
+				<span>990X100</span>
 			</div>
 			<div>
-				<span>上传图片：</span><input type="text"><input type="button" value="选择图片"><img src="">
-			</div>
-			<div>
-				<span>点击链接：</span><input type="text"><input type="button" value="检测"><input type="radio">第三方监控链接
-			</div>
-			<div>
-				<span>点击链接：</span><input type="text">
-			</div>
-			<div>
-				<span>目标窗口：</span><input type="checkout">新开窗口<input type="checkout">源窗口
-			</div>
-			<div>
-				<span>投放时间：</span><input type="text"><input type="text">至<input type="text"><input type="text"><input type="checkbox">不限时间
-			</div>
-			<div>
+				<i>上传图片：</i>
 				<span>
-					精准投放
+					<input type="text"><input class="pop-button" type="button" value="选择图片"><img src="http://fb.topit.me/b/7a/1f/11669668569551f7abo.jpg" alt="此处是图片" width="162" height="108">
 				</span>
-				<input type="text">省<input type="text">市 <input type="button" value="添加">
+			</div>
+			<div>
+				<i>点击链接：</i>
+				<span>
+					<input type="text">
+					<input class="pop-button" type="button" value="检测"><br><label><input type="radio">第三方监控链接</label>
+				</span>
+			</div>
+			<div>
+				<i>点击链接：</i>
+				<span><input type="text"></span>
+			</div>
+			<div>
+				<i>目标窗口：</i>
+				<span>
+					<label><input type="radio" name="window" value="new" checked="checked">新开窗口</label>
+					<label><input type="radio" name="window" value="start">源窗口</label>
+				</span>
+			</div>
+			<div>
+				<i>投放时间：</i>
+				<span>
+					<input type="text"><input type="text">至&nbsp&nbsp<input type="text"><input type="text">
+					<label><input type="checkbox">不限时间</label>
+			</div>
+			<div>
+				<i>精准投放：</i>
+				<span>
+					<select>
+						<option></option>
+					</select> 省
+					<select>
+						<option></option>
+					</select> 市
+					<input class="pop-button" type="button" value="添加">
+				</span>
 				<div></div>
 			</div>
 			<div>
-				<span>
-					需求人：
-				</span>
-				<input type="text">
+				<i>需求人：</i>
+				<span><input type="text"></span>
 			</div>
-			<input type="button" value="完成">
+			<span></span>
+			<input class="pop-button" type="button" value="完成">
 		</div>
 	</form>
 </div>
