--- a/partials/warehouse.html
+++ b/partials/warehouse.html
@@ -1,17 +1,19 @@
-<div class="warehouse effect8">
-    <span>广告物料：</span>
-    <input type="button" value="添加">
-    <input type="button" value="从物料库中选择">
-    <span>频道：</span>
-    <select name="" id="">
-        <option>选择1</option>
-        <option>选择2</option>
-        <option>选择3</option>
-        <option>选择4</option>
-        <option>选择5</option>
-        <option>选择6</option>
-    </select>
-    <table border="1" class="warehouse-item">
+<div class="warehouse">
+    <div class="warehouse-select">
+        <span>广告物料：</span>
+        <input type="button" value="添加">
+        <input type="button" value="从物料库中选择">
+        <span>频道：</span>
+        <select name="" id="">
+            <option>选择1</option>
+            <option>选择2</option>
+            <option>选择3</option>
+            <option>选择4</option>
+            <option>选择5</option>
+            <option>选择6</option>
+        </select>
+    </div>
+    <table border="0" class="warehouse-item">
         <tr>
             <th>广告物料名称</th>
             <th>上线时间</th>
