--- a/css/components/_warehouse.scss
+++ b/css/components/_warehouse.scss
@@ -1,12 +1,60 @@
 .warehouse{
-	.warehouse-item{
+	padding: 16px 12px;
+	border: 1px solid #e7e7e7;
+	text-align: center;
+	font-size: 14px;
+	color: #4c4c4c;
+	.warehouse-select {
+		line-height: 33px;
+		@extend .clear;
+		span, input, select {
+			@extend .fl;
+		}	
+		input {
+			padding: 8px 12px;
+			color: #fff;
+			background-color: #27a7d7;
+			border: none;
+			border-radius: 4px;
+		}
+		input:last-of-type {
+			margin-left: 12px;
+		}
+		span:last-of-type {
+			margin-left: 40px;
+		}
+		select {
+			margin-top: 5px;
+			min-width: 138px;
+			height: 21px;
+			border: 1px solid #6cc3e4;
+		}
+	}
+	.warehouse-item {
 		width: 100%;
-		@extend .table;
-		td{
-			@extend .td;
+		margin-top: 20px;
+		text-align: center;
+		tr {
+			line-height: 36px;
+			border: 1px solid #ccc;
+			th {
+				
+			}
 		}
-		th{
-			@extend .td;
+		tr:nth-of-type(odd) {
+			background-color: #fafafa;
 		}
+		td input {
+			margin-right: 6px;
+		}
+	}
+	&>input {
+		min-width: 80px;
+		padding: 8px 12px;
+		margin-top: 14px;
+		color: #fff;
+		background-color: #27a7d7;
+		border: none;
+		border-radius: 4px;
 	}
 }
