--- a/partials/material.html
+++ b/partials/material.html
@@ -1,4 +1,4 @@
-<div class="material effect8">
+<div class="material">
     <table class="material-item">
         <tr>
             <th>广告物料名称</th>
@@ -9,20 +9,20 @@
             <th>管理操作</th>
         </tr>
         <tr>
-            <td>
+            <td valign="top">
                 <span>
                     一猫首页东标倒流广告banner
                 </span>
                 <br/>
                 <img src="../img/ad.png" width="100" height="100">
             </td>
-            <td>490*140</td>
-            <td>2015.9.1 10:20 --2015.9.2 10:20</td>
-            <td>543221</td>
-            <td>全国</td>
-            <td>
-                <a href="javascript:;">修改</a>
-                <a href="javascript:;">预览</a>
+            <td valign="top">490*140</td>
+            <td valign="top">2015.9.1 10:20 --2015.9.2 10:20</td>
+            <td valign="top">543221</td>
+            <td valign="top">全国</td>
+            <td valign="top">
+                <a href="javascript:;">修改 <i>|</i></a>
+                <a href="javascript:;">预览 <i>|</i></a>
                 <a href="javascript:;">移除</a>
             </td>
         </tr>
